Telefono en registro
Ahora se solicita el numero de telefono al momento de registrarse
